--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon" />
 	<link rel="icon" href="image/favicon.ico" type="image/x-icon" />
 	<!-- Font Awesome Icons -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" />
+	<link rel="stylesheet" href="css/all.min.css" type="text/css" />
 	<!-- Grid CSS -->
 	<link rel="stylesheet" href="css/grid.css" type="text/css" />
 	<!-- Style CSS -->
@@ -90,6 +90,6 @@
 	<!-- jQuery Library -->
 	<script src="js/jquery.min.js"></script>
 	<!-- Accordian JS -->
-	<script src="js/accordion.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
